<resources>
    <string name="app_name">Login Test</string>
    <string name="email_prompt">Email</string>
    <string name="password_prompt">Password</string>
    <string name="log_in_prompt">Log In</string>
    <string name="sign_in_prompt">Sign In</string>
    <string name="create_account_prompt">Create Account</string>
    <string name="google_web_id">593577416670-ievs7p1s02qsocpiqbahp59benk10fn3.apps.googleusercontent.com</string>
    <string name="facebook_app_id">286615945180754</string>
    <string name="fb_login_protocol_scheme">fb286615945180754</string>
    <string name="twitter_key">	l0uTHIbI0ibWogXEjGGwIaoj4</string>
    <string name="twitter_secret">XrAP4NZ8FNqU8WREZ0uI3CuCOb0yir8IZuucliJX2xYFLpsZig</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signin_alternatives">Or, sign in with:</string>
    <string name="password_prompt_repeat">Repeat Password</string>
    <string name="no_account_label">No account?</string>
    <string name="create_new_account_label">&lt;u>Create one&lt;/u>.</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password_label">Forgot password?</string>
    <string name="reset_it_here">&lt;u>Reset it here&lt;/u>.</string>
    <string name="reset_password_label">Send Reset Password Link</string>
</resources>
