<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gaucow.logintest.CreateAccount"
    android:id="@+id/coordinatorLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <EditText
        android:id="@+id/create_user_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_prompt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/create_user_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_prompt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/create_user_password_repeat"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_prompt_repeat"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/createAccount"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:backgroundTint="#00FFAE" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
