<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gaucow.logintest.MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/user_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_prompt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/user_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_prompt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/log_in"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_prompt"
            android:backgroundTint="#00FFAE" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_alternatives"
        android:layout_marginLeft="20dp"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:visibility="gone" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/user_fb_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:backgroundTint="#415dae"
            android:src="@drawable/com_facebook_button_login_logo"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp" />

        <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/sign_in_google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/googleg_standard_color_18"
            app:backgroundTint="#FFFFFF"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/twitter_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:backgroundTint="#00aced"
            android:src="@drawable/tw__composer_logo_white"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="4dp"
            android:text="@string/no_account_label" />
        <TextView
            android:id="@+id/create_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_new_account_label" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="4dp"
            android:text="@string/forgot_password_label" />
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reset_it_here" />
    </LinearLayout>
</LinearLayout>
